# opengl-sample-android

./: README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/alexander/kozubets/opengl/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: draw_color.frag  draw_color.vert  draw_texture.frag  draw_texture.vert  draw_texture_2.frag  draw_texture_2.vert  draw_texture_grey.frag  draw_transform.vert
app/src/main/cpp/: CMakeLists.txt  IScene.h  Shader.cpp  Shader.h  native-lib.cpp
app/src/main/cpp/gl_wrapper/: GL2.cpp  GL2.h  GLDrawElementsMode.h
app/src/main/cpp/math/: matr4.h
app/src/main/cpp/repository/: ShaderRepository.cpp  ShaderRepository.h
app/src/main/cpp/scenes/: IScene.h  Scene.cpp  Scene.h
app/src/main/cpp/scenes/texture/: TextureScene.cpp  TextureScene.h
app/src/main/cpp/scenes/transformation/: TransformationScene.cpp  TransformationScene.h
app/src/main/cpp/scenes/triangle/: TriangleScene.cpp  TriangleScene.h
app/src/main/cpp/utils/: gl_error_check.h  log_macros.h
app/src/main/java/com/alexander/kozubets/opengl/renderer/: CubeTransformRenderer.java  PrimitivesRenderer.java  TextureProjectionRenderer.java  TextureRenderer.java  TriangleRenderer.java
app/src/main/java/com/alexander/kozubets/opengl/sample/: AssetsShaderRepository.java  DefaultSeekBarListener.java  DrawElementsModeClickListener.java  MainActivity.java
app/src/main/java/com/alexander/kozubets/opengl/task/: LoadBitmapAsyncTask.java  LoadTextureBytesAsyncTask.java
app/src/main/java/com/alexander/kozubets/opengl/utils/: CreateTexture.java  Preconditions.java  StreamUtils.java
app/src/main/java/com/alexander/kozubets/opengl/view/: AssetsShaderRepository.java  ContextFactory.java  NativeRenderer.java  OpenGlView.java  ShaderNativeRenderer.java  (+1 more)
app/src/main/res/layout/: activity_main.xml  params_primitives.xml  params_texture.xml  params_transform.xml
app/src/main/res/menu/: menu_items.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
(+3 files in other folders)
